Fix Start Button on Mobile

--- a/src/style.css
+++ b/src/style.css
@@ -314,7 +314,7 @@ footer {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2rem;
-    width: 14.5rem;
+    width: 15rem;
     height: 9rem;
     border: .3rem solid rgb(173, 173, 173);
     border-radius: 2rem;
